--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@
 node_modules/
 dist/
 
-# lock files
-yarn.lock
-package-lock.json
-
 # Compiled Java class files
 *.class
 
@@ -26,7 +22,6 @@ package-lock.json
 # Maven
 target/
 dist/
-src/types
 
 # JetBrains IDE
 .idea/
@@ -53,3 +48,5 @@ Thumbs.db
 *.mov
 *.wmv
 
+# docker volumn
+.data
