--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
   "author": "SetheumJS Community",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@polkadot/api": "^5.7.1",
+    "@polkadot/api": "^5.9.1",
+    "@setheum.js/types": "^1.0.0",
+    "@subql/cli": "latest",
     "@subql/types": "latest",
-    "typescript": "^4.1.3",
-    "@subql/cli": "latest"
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@open-web3/orml-types": "^1.0.1",
+    "@polkadot/typegen": "^6.5.1",
+    "@polkadot/types": "^6.3.1",
+    "@setheum.js/sdk-core": "^1.0.0"
   }
 }
