--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@open-web3/orml-types": "^1.0.1",
     "@polkadot/typegen": "^6.5.1",
     "@polkadot/types": "^6.3.1",
-    "@setheum.js/sdk-core": "^1.0.0"
+    "@setheum.js/api": "^2.1.0",
+    "@setheum.js/api-derive": "^2.1.0",
+    "@setheum.js/sdk-core": "^1.0.0",
+    "@setheum.js/type-definitions": "^2.1.0"
   }
 }
